<resources>
    <string name="app_name">Controle de Entegas</string>
    <string name="title_home">Início</string>
    <string name="title_notifications">Avisos</string>
    <string name="title_qrcode">QRCode</string>
    <string name="title_qrcode_resultado">Identificação</string>
    <string name="id">Matrícula</string>
    <string name="nome">Nome</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_nome">Nome</string>
    <string name="title_codigo">Matrícula</string>
    <string name="title_confirmar">Confirmar Entrega</string>
    <string name="title_cancelar">Cancelar Entrega / Nova Leitura</string>
    <string name="title_qrcode_erro">Erro</string>
    <string name="title_mensagem">Mensagem</string>
    <string name="title_proxima">Próxima Leitura</string>
    <string name="title_con_protocolos">Con. Entregas</string>
</resources>