<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_qrcode"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/title_qrcode" />

    <item
        android:id="@+id/navigation_con_protocolos"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/title_con_protocolos" />
    <!--
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    -->
</menu>