<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="br.dev.marcosvirgilio.mobile.ctrlentregas.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="br.dev.marcosvirgilio.mobile.ctrlentregas.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_qrcode"
        android:name="br.dev.marcosvirgilio.mobile.ctrlentregas.ui.qrcode.QRCodeFragment"
        android:label="@string/title_qrcode"
        tools:layout="@layout/fragment_qr_code" />
    <fragment
        android:id="@+id/navigation_qrcode_lido"
        android:name="br.dev.marcosvirgilio.mobile.ctrlentregas.ui.qrcode.QRCodeLidoFragment"
        android:label="@string/title_qrcode"
        tools:layout="@layout/fragment_qr_code_lido" />
    <fragment
        android:id="@+id/navigation_qrcode_erro"
        android:name="br.dev.marcosvirgilio.mobile.ctrlentregas.ui.qrcode.QRCodeErroFragment"
        android:label="@string/title_qrcode_erro"
        tools:layout="@layout/fragment_qr_code_erro" />


</navigation>