<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.qrcode.QRCodeLidoFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_codigo" />

            <TextView
                android:id="@+id/etCodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_nome" />

            <TextView
                android:id="@+id/etNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/mensagem"
                android:textColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />
            <Button
                android:id="@+id/btConfirmar"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:text="@string/title_confirmar" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <Button
                android:id="@+id/btCancelar"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:backgroundTint="#F40808"
                android:text="@string/title_cancelar" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>